# dfinity-rust-libraries

./: .gitignore  Cargo.toml  LICENSE
scripts/: check_all.sh
src/: icrc3  icrc3_macros  (+2 more)
src/candid_gen/: Cargo.toml
src/candid_gen/src/: lib.rs
src/canister_client/: Cargo.toml
src/canister_client/src/: canister_client_macros.rs  lib.rs
src/canister_logger/: Cargo.toml
src/canister_logger/src/: lib.rs
src/canister_state_macros/: Cargo.toml
src/canister_state_macros/src/: lib.rs
src/canister_timer_jobs/: Cargo.toml
src/canister_timer_jobs/src/: lib.rs  timer_manager.rs
src/icrc3/: Cargo.toml  ICRC3_README.md  README.md  dfx.json
src/icrc3/backend/canisters/icrc3_archive/api/: Cargo.toml
src/icrc3/backend/canisters/icrc3_archive/api/src/queries/: get_version.rs
src/icrc3/backend/canisters/icrc3_archive/api/src/types/: defaultblock.rs
src/icrc3/backend/canisters/icrc3_archive/api/src/updates/: insert_blocks.rs
src/icrc3/backend/canisters/icrc3_archive/impl/src/: state.rs
src/icrc3/backend/canisters/icrc3_archive/impl/src/lifecycle/: post_upgrade.rs
src/icrc3/backend/canisters/icrc3_archive/impl/src/queries/: mod.rs  remaining_capacity.rs
src/icrc3/backend/canisters/icrc3_archive/impl/src/updates/: mod.rs
src/icrc3/backend/canisters/icrc3_example/api/src/queries/: icrc3_get_archives.rs  icrc3_get_properties.rs  icrc3_get_tip_certificate.rs  icrc3_supported_block_types.rs
src/icrc3/backend/canisters/icrc3_example/api/src/updates/: remove_authorized_principals.rs
src/icrc3/backend/canisters/icrc3_example/impl/: Cargo.toml
src/icrc3/backend/canisters/icrc3_example/impl/src/: state.rs
src/icrc3/backend/canisters/icrc3_example/impl/src/queries/: icrc3_get_blocks.rs
src/icrc3/backend/canisters/icrc3_example/impl/src/updates/: add_random_transaction.rs
src/icrc3/backend/integration_testing/: Cargo.toml
src/icrc3/backend/integration_testing/src/: wasms.rs
src/icrc3/backend/integration_testing/src/icrc3_suite/setup/: setup.rs  setup_icrc3.rs
src/icrc3/icrc3_library/: Cargo.toml
src/icrc3/icrc3_library/src/: interface.rs  transaction.rs  utils.rs
src/icrc3/icrc3_library/src/blockchain/: archive_canister.rs  archive_canister_manager.rs  blockchain.rs
src/icrc3/icrc3_macros/src/: lib.rs
src/icrc3/scripts/: build_archive.sh  build_example.sh  run_integrations_tests.sh
src/icrc3/src/: config.rs  icrc3.rs  interface.rs  lib.rs  memory.rs  transaction.rs  types.rs  utils.rs
src/icrc3/src/blockchain/: archive_canister.rs  archive_canister_manager.rs  blockchain.rs
src/icrc3_archive_api/: Cargo.toml  can.did
src/icrc3_archive_api/src/types/: defaultblock.rs  encoded_blocks.rs  mod.rs
src/icrc3_archive_c2c_client/: Cargo.toml
src/icrc3_archive_c2c_client/src/: lib.rs
src/icrc3_c2c_client/: Cargo.toml
src/icrc3_c2c_client/src/: lib.rs
src/icrc3_canisters/canisters/icrc3_archive/c2c_client/: Cargo.toml
src/icrc3_canisters/canisters/icrc3_archive/impl/: Cargo.toml
src/icrc3_canisters/canisters/icrc3_archive/impl/src/: guards.rs  lib.rs  memory.rs  state.rs  utils.rs
src/icrc3_canisters/canisters/icrc3_archive/impl/src/lifecycle/: init.rs  post_upgrade.rs
src/icrc3_canisters/canisters/icrc3_archive/impl/src/queries/: icrc3_get_blocks.rs  total_transactions.rs
src/icrc3_canisters/canisters/icrc3_archive/impl/src/types/: archive.rs
src/icrc3_canisters/canisters/icrc3_example/api/: Cargo.toml  can.did
src/icrc3_canisters/canisters/icrc3_example/api/src/: types.rs
src/icrc3_canisters/canisters/icrc3_example/api/src/lifecycle/: init.rs
src/icrc3_canisters/canisters/icrc3_example/api/src/queries/: http_request.rs  icrc3_get_properties.rs  icrc3_get_tip_certificate.rs  icrc3_supported_block_types.rs
src/icrc3_canisters/canisters/icrc3_example/api/src/updates/: add_authorized_principals.rs  add_created_transaction.rs  add_transactions_with_async.rs  commit_prepared_transaction.rs  create_transactions.rs  mod.rs  prepare_transaction.rs
src/icrc3_canisters/canisters/icrc3_example/impl/: Cargo.toml
src/icrc3_canisters/canisters/icrc3_example/impl/src/: state.rs  utils.rs
src/icrc3_canisters/canisters/icrc3_example/impl/src/lifecycle/: init.rs  post_upgrade.rs  pre_upgrade.rs
src/icrc3_canisters/canisters/icrc3_example/impl/src/queries/: create_transactions.rs  icrc3_get_archives.rs  icrc3_get_blocks.rs  icrc3_get_properties.rs  icrc3_get_tip_certificate.rs  icrc3_supported_block_types.rs  mod.rs
src/icrc3_canisters/canisters/icrc3_example/impl/src/updates/: add_created_transaction.rs  add_random_transaction.rs  add_same_transactions.rs  add_transactions_with_async.rs  commit_prepared_transaction.rs  mod.rs  prepare_transaction.rs
src/icrc3_canisters/integration_testing/: Cargo.toml
src/icrc3_canisters/integration_testing/src/: lib.rs  utils.rs  wasms.rs
src/icrc3_canisters/integration_testing/src/client/: icrc3.rs  icrc3_archive.rs  mod.rs
src/icrc3_canisters/integration_testing/src/icrc3_suite/setup/: mod.rs  setup.rs  setup_icrc3.rs
src/icrc3_canisters/integration_testing/src/icrc3_suite/tests/: mod.rs  test_icrc3_hashing.rs  test_insert_transaction.rs  test_migration.rs  test_predefined_blocks.rs
src/icrc3_impl/backend/canisters/icrc3_archive/api/: Cargo.toml
src/icrc3_impl/backend/canisters/icrc3_archive/api/src/lifecycle/: post_upgrade.rs
src/icrc3_impl/backend/canisters/icrc3_archive/c2c_client/: Cargo.toml
src/icrc3_impl/backend/canisters/icrc3_archive/c2c_client/src/: lib.rs
src/icrc3_impl/backend/canisters/icrc3_archive/impl/: Cargo.toml
src/icrc3_impl/backend/canisters/icrc3_archive/impl/src/: utils.rs
src/icrc3_impl/backend/canisters/icrc3_example/api/: Cargo.toml
src/icrc3_macros/: Cargo.toml
src/icrc3_macros/src/: lib.rs
src/ledger_utils/: Cargo.toml
src/ledger_utils/src/: lib.rs
src/stable_memory/: Cargo.toml
src/stable_memory/src/: lib.rs
src/subcanister_manager/: Cargo.toml
src/subcanister_manager/src/: lib.rs
src/utils/: Cargo.toml
src/utils/src/: env.rs  memory.rs  principal.rs  rand.rs  retry_async.rs
src/utils/src/canister/: deposit_cycles.rs
(+57 files in other folders)
