[package]
name = "bity-ic-candid-gen"
version = "0.1.0"
edition = "2021"
description = "Description spécifique de la crate"
license = "MIT"
repository = "https://github.com/bity/bity_dfinity_library"
keywords = ["dfinity", "internet-computer", "ic", "canister", "subcanister"]
authors = ["Bity Team", "Gautier Wojda <gautier.wojda@bity.com>", "Freddie Hands <freddie.hands@bity.com>", "Victoria Horbunova <victoria.horbunova@bity.com>", "Dustin Becker <dustin.becker@bity.com>"]
documentation = "https://docs.rs/bity-ic-candid-gen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = { workspace = true }
syn = { workspace = true }

[lib]
proc-macro = true
