[package]
name = "bity-ic-canister-timer-jobs"
version = "0.2.0"
edition = "2021"
description = "Description spécifique de la crate" 
license = "MIT"
repository = "https://github.com/BitySA/dfinity-rust-libraries"
keywords = ["dfinity", "internet-computer", "ic", "canister", "subcanister"]
authors = ["Bity Team", "Gautier Wojda <gautier.wojda@bity.com>", "Freddie Hands <freddie.hands@bity.com>", "Victoria Horbunova <victoria.horbunova@bity.com>", "Dustin Becker <dustin.becker@bity.com>"]
documentation = "https://docs.rs/bity-ic-canister-timer-jobs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk-timers = { workspace = true }
serde = { workspace = true }
bity-ic-types = "0.1.0"
bity-ic-utils = "0.2.0"
tracing = { workspace = true }
ic-cdk = { workspace = true }
syn = { workspace = true, features = ["full"] }
quote = "1.0"

[dev-dependencies]
tokio = {version = "1.39.2", features = ["rt", "macros"]}
