[package]
name = "bity-ic-icrc3"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "bity icrc3 library"
repository = "https://github.com/BitySA/dfinity-rust-libraries"
keywords = ["dfinity", "internet-computer", "ic", "canister", "subcanister"]
authors = ["Bity Team", "Gautier Wojda <gautier.wojda@bity.com>", "Freddie Hands <freddie.hands@bity.com>", "Victoria Horbunova <victoria.horbunova@bity.com>", "Dustin Becker <dustin.becker@bity.com>"]
documentation = "https://docs.rs/bity-ic-icrc3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-ledger-types = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
icrc-ledger-types = { workspace = true }
serde_cbor = { workspace = true }
canfund = { workspace = true }
ic-certification = { workspace = true }
leb128 = { workspace = true }
minicbor = { workspace = true }
ic-stable-structures = { workspace = true }
syn = { workspace = true }
ic0 = { workspace = true }
futures = { workspace = true }
serde_bytes = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

bity-ic-types = { workspace = true }
bity-ic-utils = { workspace = true }
bity-ic-subcanister-manager = { workspace = true }
bity-ic-icrc3-archive-api = { workspace = true }
bity-ic-icrc3-archive-c2c-client = { workspace = true }
