[package]
name = "bity-ic-icrc3"
version = "0.4.8"
edition = "2021"
license = "MIT"
description = "bity icrc3 library"
repository = "https://github.com/BitySA/dfinity-rust-libraries"
keywords = ["dfinity", "internet-computer", "ic", "canister", "subcanister"]
authors = ["Bity Team", "Gautier Wojda <gautier.wojda@bity.com>", "Freddie Hands <freddie.hands@bity.com>", "Victoria Horbunova <victoria.horbunova@bity.com>", "Dustin Becker <dustin.becker@bity.com>"]
documentation = "https://docs.rs/bity-ic-icrc3"

[features]
default = []
debug-logs = []

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-ledger-types = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
icrc-ledger-types = { workspace = true }
serde_cbor = { workspace = true }
canfund = { workspace = true }
ic-certification = { workspace = true }
leb128 = { workspace = true }
ic-stable-structures = { workspace = true }
syn = { workspace = true }
ic0 = { workspace = true }
futures = { workspace = true }
serde_bytes = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }

bity-ic-canister-time = "0.2.0"
bity-ic-types = "0.1.1"
bity-ic-utils = "0.2.0"
bity-ic-subcanister-manager = "0.3.1"
bity-ic-icrc3-archive-api = "0.3.1"
bity-ic-icrc3-archive-c2c-client = "0.3.1"
