[package]
name = "bity-ic-icrc3-archive-api"
version = "0.3.2"
description = "bity icrc3 archive api"
edition = "2021"
license = "MIT"
repository = "https://github.com/BitySA/dfinity-rust-libraries"
keywords = ["dfinity", "internet-computer", "ic", "canister", "subcanister"]
authors = ["Bity Team", "Gautier Wojda <gautier.wojda@bity.com>", "Freddie Hands <freddie.hands@bity.com>", "Victoria Horbunova <victoria.horbunova@bity.com>", "Dustin Becker <dustin.becker@bity.com>"]
documentation = "https://docs.rs/bity-ic-icrc3-archive-api"

[features]
inttest = []

[dependencies]
candid = { workspace = true }
icrc-ledger-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
ic-stable-structures = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_cbor = { workspace = true }
minicbor = { workspace = true }

bity-ic-types = "0.1.2"
# bity-ic-types = { path = "../types" }
