[package]
name = "bity-ic-icrc3-archive-c2c-client"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "bity icrc3 archive c2c client"
repository = "https://github.com/BitySA/dfinity-rust-libraries"
keywords = ["dfinity", "internet-computer", "ic", "canister", "subcanister"]
authors = ["Bity Team", "Gautier Wojda <gautier.wojda@bity.com>", "Freddie Hands <freddie.hands@bity.com>", "Victoria Horbunova <victoria.horbunova@bity.com>", "Dustin Becker <dustin.becker@bity.com>"]
documentation = "https://docs.rs/bity-ic-icrc3-archive-c2c-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bity-ic-canister-client = { path = "../canister_client" }
ic-cdk = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }

# bity-ic-canister-client = "0.2.5"
# bity-ic-icrc3-archive-api = "0.3.2"
# bity-ic-types = "0.1.2"

bity-ic-canister-client = { path = "../canister_client" }
bity-ic-icrc3-archive-api = { path = "../icrc3_archive_api" }
bity-ic-types = { path = "../types" }
