[package]
name = "bity-ic-ledger-utils"
version = "0.1.0"
edition = "2021"
description = "Description spécifique de la crate"
license = "MIT"
repository = "https://github.com/BitySA/dfinity-rust-libraries"
keywords = ["dfinity", "internet-computer", "ic", "canister", "subcanister"]
authors = ["Bity Team", "Gautier Wojda <gautier.wojda@bity.com>", "Freddie Hands <freddie.hands@bity.com>", "Victoria Horbunova <victoria.horbunova@bity.com>", "Dustin Becker <dustin.becker@bity.com>"]
documentation = "https://docs.rs/bity-ic-ledger-utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-ledger-types = { workspace = true }
icp_ledger_canister_c2c_client = { path = "../../external_canisters/icp_ledger/c2c_client" }
icrc_ledger_canister_c2c_client = { path = "../../external_canisters/icrc_ledger/c2c_client" }
icrc-ledger-types = { workspace = true }
sha2 = { workspace = true }
sha256 = { path = "../sha256" }
bity-ic-types = "0.1.0"
