[package]
name = "bity-ic-utils"
version = "0.1.0"
edition = "2021"
description = "Description spécifique de la crate"
license = "MIT"
repository = "https://github.com/BitySA/dfinity-rust-libraries"
keywords = ["dfinity", "internet-computer", "ic", "canister", "subcanister"]
authors = ["Bity Team", "Gautier Wojda <gautier.wojda@bity.com>", "Freddie Hands <freddie.hands@bity.com>", "Victoria Horbunova <victoria.horbunova@bity.com>", "Dustin Becker <dustin.becker@bity.com>"]
documentation = "https://docs.rs/bity-ic-utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
bity-ic-canister-time = { path = "../canister_time" }
icrc-ledger-types = { workspace = true }
ic-cdk = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
bity-ic-stable-memory = { path = "../stable_memory" }
bity-ic-types = { path = "../types" }
tracing = { workspace = true }
ic-cdk-timers = { workspace = true }
tokio = { version = "1.39.2", features = ["macros", "rt"]}