[package]
name = "bity-ic-utils"
version = "0.2.1"
edition = "2021"
description = "Description spécifique de la crate"
license = "MIT"
repository = "https://github.com/BitySA/dfinity-rust-libraries"
keywords = ["dfinity", "internet-computer", "ic", "canister", "subcanister"]
authors = ["Bity Team", "Gautier Wojda <gautier.wojda@bity.com>", "Freddie Hands <freddie.hands@bity.com>", "Victoria Horbunova <victoria.horbunova@bity.com>", "Dustin Becker <dustin.becker@bity.com>"]
documentation = "https://docs.rs/bity-ic-utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-cdk = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
ic-cdk-timers = { workspace = true }
tokio = { version = "1.39.2", features = ["macros", "rt"]}
ic-management-canister-types = { workspace = true }

# bity-ic-canister-time = "0.2.0"
# bity-ic-stable-memory = "0.2.0"
# bity-ic-types = "0.1.1"

bity-ic-canister-time = { path = "../canister_time" }
bity-ic-stable-memory = { path = "../stable_memory" }
bity-ic-types = { path = "../types" }
