[package]
name = "integration_testing"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pocket-ic = { workspace = true}
candid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = "0.9.1"
lazy_static = "1.4.0"
# icrc3_index_api = { path = "../canisters/icrc3_index/api" }
serde_bytes = { workspace = true}
icrc-ledger-types = { workspace = true }

arbitrary = { version = "1.4.1", features = ["derive"] } 

# bity-ic-icrc3-archive-api = { workspace = true }
# bity-ic-icrc3 = { path = { workspace = true }
# bity-ic-types = { workspace = true }
# bity-ic-utils = { workspace = true }
# bity-ic-canister-time = { workspace = true }

bity-ic-icrc3-archive-api = { path = "../../icrc3_archive_api" }
bity-ic-icrc3 = { path = "../../icrc3" }
bity-ic-types = { path = "../../types" }
bity-ic-utils = { path = "../../utils" }
bity-ic-canister-time = { path = "../../canister_time" }


icrc3-example-api = { path = "../canisters/icrc3_example/api" }
