[package]
name = "bity-ic-icrc3-archive-c2c-client"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "bity icrc3 archive c2c client"
repository = "https://github.com/BitySA/dfinity-rust-libraries"
keywords = ["dfinity", "internet-computer", "ic", "canister", "subcanister"]
authors = ["Bity Team", "Gautier Wojda <gautier.wojda@bity.com>", "Freddie Hands <freddie.hands@bity.com>", "Victoria Horbunova <victoria.horbunova@bity.com>", "Dustin Becker <dustin.becker@bity.com>"]
documentation = "https://docs.rs/bity-ic-icrc3-archive-c2c-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bity-ic-canister-client = { workspace = true }
bity-ic-icrc3-archive-api = { workspace = true }
ic-cdk = { workspace = true }
candid = { workspace = true }
bity-ic-types = { workspace = true }