[package]
name = "icrc3_archive"
version = "0.3.0"
description = "icrc3 archive"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true}
tracing = { workspace = true }
ciborium = { workspace = true }
num-traits = { workspace = true }
ic0 = { workspace = true }

bity-ic-serializer ={ workspace = true }
bity-ic-stable-memory ={ workspace = true }
bity-ic-types = { workspace = true }
bity-ic-utils = { workspace = true }
bity-ic-icrc3-archive-api = { workspace = true }
bity-ic-canister-logger = { workspace = true }
bity-ic-canister-state-macros ={ workspace = true }
bity-ic-canister-tracing-macros = { workspace = true }
