[package]
name = "icrc3-example-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
bity-ic-types = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-cdk = { workspace = true }

bity-ic-icrc3-archive-api = { path = "../../icrc3_archive/api" }
bity-ic-icrc3 = { path = "../../../../icrc3", features = ["debug-logs"] }