[package]
name = "icrc3-example"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
icrc-ledger-types = { workspace = true }
ic0 = { workspace = true }
serde_bytes = { workspace = true }
lazy_static = { workspace = true }

# bity-ic-canister-logger = "0.2.1"
# bity-ic-canister-state-macros = "0.2.2"
# bity-ic-canister-tracing-macros = "0.1.1"
# bity-ic-canister-time = "0.2.2"
# bity-ic-serializer = "0.1.1"
# bity-ic-stable-memory = "0.2.2"
bity-ic-types = "0.2.0"
# bity-ic-utils = "0.2.2"
# icrc3-example-api = { path = "../api" }
# bity-ic-icrc3 = { path = "../../../../icrc3" }
# bity-ic-icrc3-macros = { path = "../../../../icrc3_macros" }

bity-ic-canister-logger = { path =   "../../../../canister_logger" }
bity-ic-canister-state-macros = { path = "../../../../canister_state_macros" }
bity-ic-canister-tracing-macros = { path = "../../../../canister_tracing_macros" }
bity-ic-canister-time = { path = "../../../../canister_time" }
bity-ic-serializer = { path = "../../../../serializer" }
bity-ic-stable-memory = { path = "../../../../stable_memory" }
# bity-ic-types ={ path = "../../../../types" }
bity-ic-utils = { path = "../../../../utils" }
icrc3-example-api = { path = "../api" }
bity-ic-icrc3 = { path = "../../../../icrc3" }
bity-ic-icrc3-macros = { path = "../../../../icrc3_macros" }