[package]
name = "icrc3-example"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
bity-ic-canister-logger = { workspace = true }
bity-ic-canister-state-macros = { workspace = true }
bity-ic-canister-tracing-macros = { workspace = true }
bity-ic-canister-time = { workspace = true }
bity-ic-serializer = { workspace = true }
bity-ic-stable-memory = { workspace = true }
bity-ic-types ={ workspace = true }
bity-ic-utils = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
icrc3_example_api = { path = "../api" }
icrc3 = { path = "../../../../icrc3_library" }
sha2 = { workspace = true }
icrc-ledger-types = { workspace = true }
ic0 = { workspace = true }
serde_bytes = { workspace = true }
icrc3-macros = { path = "../../../../icrc3_macros" }
lazy_static = { workspace = true }