[package]
name = "bity-ic-icrc3-archive-api"
version = "0.1.0"
description = "bity icrc3 archive api"
edition = "2021"
license = "MIT"
repository = "https://github.com/BitySA/dfinity-rust-libraries"
keywords = ["dfinity", "internet-computer", "ic", "canister", "subcanister"]
authors = ["Bity Team", "Gautier Wojda <gautier.wojda@bity.com>", "Freddie Hands <freddie.hands@bity.com>", "Victoria Horbunova <victoria.horbunova@bity.com>", "Dustin Becker <dustin.becker@bity.com>"]
documentation = "https://docs.rs/bity-ic-icrc3-archive-api"

[features]
inttest = []

[dependencies]
bity-ic-types = "0.1.0"
candid = "0.10.13"
icrc-ledger-types = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.17"
ic-stable-structures = "0.6.7"
sha2 = "0.10"
hex = "0.4.3"
serde_cbor = "0.11"