[package]
name = "bity-ic-icrc3-archive-c2c-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bity-ic-canister-client = { workspace = true }
bity-ic-icrc3-archive-api = { workspace = true }
ic-cdk = { workspace = true }
candid = { workspace = true }
bity-ic-types = { workspace = true }
